Began working on cli tool for building raxel projects, added installer

--- a/raxel/CMakeLists.txt
+++ b/raxel/CMakeLists.txt
@@ -34,6 +34,31 @@ set(RAXEL_PROJECT_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 
 add_executable(${PROJECT})
 
+# --- Fetching Dependencies (Vulkan, GLFW, etc) ---
+
+# Vulkan is a required dependency.
+include(FindVulkan)
+if(NOT VULKAN_FOUND)
+    message(FATAL_ERROR "Vulkan SDK not installed.")
+endif()
+
+# GLFW is a required dependency.
+set(GLFW_VERSION 3.3.8)
+include(FetchContent)
+FetchContent_Declare(
+    glfw
+    URL https://github.com/glfw/glfw/archive/refs/tags/${GLFW_VERSION}.tar.gz)
+
+include(FetchContent)
+FetchContent_Declare(CSFML
+    GIT_REPOSITORY https://github.com/SFML/CSFML.git
+    GIT_TAG 3.0.0
+    GIT_SHALLOW ON
+    EXCLUDE_FROM_ALL
+    SYSTEM)
+FetchContent_MakeAvailable(CSFML)
+
+
 # --- COMPILING RAXEL ENGINE ---
 
 message(STATUS "Compiling Raxel Engine")
@@ -49,3 +74,11 @@ add_library(raxel STATIC
     ${RAXEL_CORE_SOURCES} 
     ${RAXEL_CORE_HEADERS}
 )
+
+# set raxel to be a c99 library
+set_property(TARGET raxel PROPERTY C_STANDARD 99)
+
+# call the build_project function, which should be defined in the raxel.cmake file
+set(RAXEL_PROJECT_CMAKE ${RAXEL_PROJECT_ROOT_DIR}/raxel.cmake)
+
+build_project()
