began working on containers

--- a/raxel/.vscode/settings.json
+++ b/raxel/.vscode/settings.json
@@ -8,6 +8,28 @@
         "glfw3.h": "c",
         "util.h": "c",
         "raxel_container.h": "c",
-        "raxel_mem.h": "c"
+        "raxel_mem.h": "c",
+        "array": "c",
+        "compare": "c",
+        "format": "c",
+        "functional": "c",
+        "memory": "c",
+        "ratio": "c",
+        "tuple": "c",
+        "type_traits": "c",
+        "utility": "c",
+        "xmemory": "c",
+        "xstring": "c",
+        "xtr1common": "c",
+        "xutility": "c",
+        "bitset": "c",
+        "deque": "c",
+        "initializer_list": "c",
+        "list": "c",
+        "queue": "c",
+        "random": "c",
+        "vector": "c",
+        "xhash": "c",
+        "xtree": "c"
     }
 }
