Got more tests to pass for arrays, lists, and strings

--- a/raxel/.vscode/settings.json
+++ b/raxel/.vscode/settings.json
@@ -4,6 +4,7 @@
         "*.ndjson": "jsonl",
         "*.dbclient-js": "javascript",
         "*.compute": "hlsl",
-        "exception": "cpp"
+        "exception": "cpp",
+        "list": "cpp"
     }
 }
