--- a/raxel/.vscode/settings.json
+++ b/raxel/.vscode/settings.json
@@ -5,6 +5,10 @@
         "*.dbclient-js": "javascript",
         "*.compute": "hlsl",
         "exception": "cpp",
-        "list": "cpp"
+        "list": "cpp",
+        "array": "cpp",
+        "vector": "cpp",
+        "xstring": "cpp",
+        "xutility": "cpp"
     }
 }
