--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "raxel_voxel.h": "c",
         "raxel_container.h": "c",
         "vulkan.h": "c",
-        "vk.h": "c"
+        "vk.h": "c",
+        "graphics.h": "c"
     }
 }
