--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,7 @@
         "clear_color_pass.h": "c",
         "raxel_input.h": "c",
         "raxel_debug.h": "c",
-        "xmemory": "c"
+        "xmemory": "c",
+        "raxel_hashtable.h": "c"
     }
 }
